syntax = "proto3";

package company;


service CompanyService{
    rpc CreateCompany(CreateCompanyRequest) returns (CreateCompanyResponse);
    rpc GetByIdCompany(GetByIdCompanyRequest) returns (GetByIdCompanyResponse);
    rpc DeleteCompany(DeleteCompanyRequest) returns (DeleteCompanyResponse);
}


message CreateCompanyRequest{
    string id=1;
    string name=2;
    string phonenumber=3;
    string email=4;
    string password=5;
    string info=6;
    string created_at=7;
    string updated_at=8;
    string deleted_at=9;
}

message CreateCompanyResponse{
    string id=1;
    string name=2;
    string phonenumber=3;
    string email=4;
    string password=5;
    string info=6;
}

message GetByIdCompanyRequest{
    string id=1;
}

message GetByIdCompanyResponse{
    string id=1;
    string name=2;
    string phonenumber=3;
    string email=4;
    string info=5;
    string created_at=6;
    string updated_at=7;
}

message DeleteCompanyRequest{
    string id=1;
}

message DeleteCompanyResponse{
    
}